Fix bug #42850 array_walk_recursive() leaves references, refix bug #34982